--- a/hh-ios/View/Table Cells/ChatActionTableViewCell.xib
+++ b/hh-ios/View/Table Cells/ChatActionTableViewCell.xib
@@ -1,52 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="51" id="KGk-i7-Jjw" customClass="ChatActionTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="51"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="61" id="KGk-i7-Jjw" customClass="ChatActionTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="50.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="60.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ian Richard paid Brian Cox for paper towels" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFE-Qp-pho">
-                        <rect key="frame" x="52" y="7" width="260" height="31.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_black.png" translatesAutoresizingMaskIntoConstraints="NO" id="fOV-dy-1QR">
-                        <rect key="frame" x="20" y="8" width="20" height="20"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zkh-Js-mjU">
+                        <rect key="frame" x="8" y="5" width="304" height="50"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ian Richard paid Brian Cox for paper towels" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nFE-Qp-pho">
+                                <rect key="frame" x="52" y="10" width="244" height="26"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_black.png" translatesAutoresizingMaskIntoConstraints="NO" id="fOV-dy-1QR">
+                                <rect key="frame" x="18" y="12" width="26" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="26" id="0mr-b5-QWs"/>
+                                    <constraint firstAttribute="height" constant="26" id="xEI-Ah-u7N"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.23921568627450979" green="0.30980392156862746" blue="0.36078431372549019" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="20" id="1be-0m-ZZx"/>
-                            <constraint firstAttribute="height" constant="20" id="SJv-3t-QvH"/>
+                            <constraint firstAttribute="bottom" secondItem="nFE-Qp-pho" secondAttribute="bottom" constant="14" id="MqP-fb-4dW"/>
+                            <constraint firstItem="nFE-Qp-pho" firstAttribute="leading" secondItem="fOV-dy-1QR" secondAttribute="trailing" constant="8" id="OdF-QE-Xgd"/>
+                            <constraint firstItem="fOV-dy-1QR" firstAttribute="top" secondItem="zkh-Js-mjU" secondAttribute="top" constant="12" id="fFG-yK-tcR"/>
+                            <constraint firstItem="fOV-dy-1QR" firstAttribute="leading" secondItem="zkh-Js-mjU" secondAttribute="leading" constant="18" id="sc4-rc-1JT"/>
+                            <constraint firstAttribute="trailing" secondItem="nFE-Qp-pho" secondAttribute="trailing" constant="8" id="yOl-RJ-DT6"/>
+                            <constraint firstItem="nFE-Qp-pho" firstAttribute="top" secondItem="zkh-Js-mjU" secondAttribute="top" constant="10" id="zU6-V7-Bbq"/>
                         </constraints>
-                    </imageView>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="fOV-dy-1QR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="4Ai-yS-fAL"/>
-                    <constraint firstItem="fOV-dy-1QR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="4UU-h8-IBh"/>
-                    <constraint firstItem="nFE-Qp-pho" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="52" id="LFe-pg-ynS"/>
-                    <constraint firstAttribute="trailing" secondItem="nFE-Qp-pho" secondAttribute="trailing" constant="8" id="ObP-bj-vkS"/>
-                    <constraint firstAttribute="bottom" secondItem="nFE-Qp-pho" secondAttribute="bottom" constant="12" id="Zm8-Ko-ryF"/>
-                    <constraint firstItem="nFE-Qp-pho" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="jCM-pc-lzw"/>
+                    <constraint firstAttribute="trailing" secondItem="zkh-Js-mjU" secondAttribute="trailing" constant="8" id="7jy-kb-kI9"/>
+                    <constraint firstItem="zkh-Js-mjU" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="9df-rk-ia6"/>
+                    <constraint firstAttribute="bottom" secondItem="zkh-Js-mjU" secondAttribute="bottom" constant="5" id="Bbk-6Z-dsh"/>
+                    <constraint firstItem="zkh-Js-mjU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="C9x-gW-xNG"/>
                 </constraints>
             </tableViewCellContentView>
-            <color key="backgroundColor" red="0.81176470588235294" green="0.84705882352941175" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="actionImage" destination="fOV-dy-1QR" id="Uz9-Rr-ayF"/>
                 <outlet property="actionLabel" destination="nFE-Qp-pho" id="pZb-Mx-e3X"/>
+                <outlet property="containerView" destination="zkh-Js-mjU" id="Rxm-tB-JZR"/>
             </connections>
-            <point key="canvasLocation" x="34" y="128.5"/>
+            <point key="canvasLocation" x="34" y="123.5"/>
         </tableViewCell>
     </objects>
     <resources>
