--- a/hh-ios/View/Table Cells/ChatMessageTableViewCell.xib
+++ b/hh-ios/View/Table Cells/ChatMessageTableViewCell.xib
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ChatMessageTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="48"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="52" id="KGk-i7-Jjw" customClass="ChatMessageTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="52"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="47.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="51.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uGV-Lc-yVJ">
-                        <rect key="frame" x="16" y="4" width="28" height="28"/>
+                        <rect key="frame" x="24" y="4" width="31" height="31"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="28" id="LJw-sB-BGQ"/>
-                            <constraint firstAttribute="height" constant="28" id="t4o-79-9Ie"/>
+                            <constraint firstAttribute="width" constant="31" id="LJw-sB-BGQ"/>
+                            <constraint firstAttribute="height" constant="31" id="t4o-79-9Ie"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUh-HP-O0W">
-                        <rect key="frame" x="52" y="4" width="260" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Request to Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUh-HP-O0W">
+                        <rect key="frame" x="63" y="4" width="249" height="15"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="mhx-3E-hZJ"/>
                         </constraints>
@@ -36,40 +35,41 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Message" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RBi-z3-QQM">
-                        <rect key="frame" x="52" y="19" width="260" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <rect key="frame" x="63" y="19" width="249" height="22"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LW0-m7-Mzi">
-                        <rect key="frame" x="0.0" y="0.0" width="6" height="48"/>
-                        <color key="backgroundColor" red="0.0" green="0.58823529411764708" blue="0.52941176470588236" alpha="1" colorSpace="calibratedRGB"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uNV-Nf-3pK">
+                        <rect key="frame" x="0.0" y="0.0" width="7" height="52"/>
+                        <color key="backgroundColor" red="0.0" green="0.58823529411764708" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="6" id="EKC-wB-sNi"/>
+                            <constraint firstAttribute="width" constant="7" id="MY6-Xu-gPw"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="LW0-m7-Mzi" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="38s-8a-M0F"/>
+                    <constraint firstItem="uNV-Nf-3pK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="6Gb-ae-Jnl"/>
                     <constraint firstItem="RBi-z3-QQM" firstAttribute="leading" secondItem="uGV-Lc-yVJ" secondAttribute="trailing" constant="8" id="9Ca-ie-MzR"/>
                     <constraint firstAttribute="trailing" secondItem="RBi-z3-QQM" secondAttribute="trailing" constant="8" id="BRC-0w-s96"/>
                     <constraint firstItem="uGV-Lc-yVJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="FBy-vs-NHu"/>
-                    <constraint firstAttribute="bottom" secondItem="RBi-z3-QQM" secondAttribute="bottom" constant="7.5" id="HjG-dM-DLa"/>
-                    <constraint firstAttribute="bottom" secondItem="LW0-m7-Mzi" secondAttribute="bottom" id="Hur-ep-gxb"/>
                     <constraint firstItem="uGV-Lc-yVJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="Ljl-yl-ozx"/>
+                    <constraint firstAttribute="bottom" secondItem="uNV-Nf-3pK" secondAttribute="bottom" id="M02-MR-DvW"/>
+                    <constraint firstItem="uNV-Nf-3pK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Nky-r0-4wr"/>
                     <constraint firstItem="vUh-HP-O0W" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="Oo3-uV-SBM"/>
-                    <constraint firstItem="LW0-m7-Mzi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="PA5-q2-2Mp"/>
                     <constraint firstAttribute="trailing" secondItem="vUh-HP-O0W" secondAttribute="trailing" constant="8" id="c3E-Zf-DW3"/>
                     <constraint firstItem="vUh-HP-O0W" firstAttribute="leading" secondItem="uGV-Lc-yVJ" secondAttribute="trailing" constant="8" id="fN2-vA-MWc"/>
                     <constraint firstItem="RBi-z3-QQM" firstAttribute="top" secondItem="vUh-HP-O0W" secondAttribute="bottom" id="w7X-NK-3BK"/>
+                    <constraint firstAttribute="bottom" secondItem="RBi-z3-QQM" secondAttribute="bottom" constant="10.5" id="wqk-Fy-n9e"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="markerView" destination="LW0-m7-Mzi" id="h7m-nz-N3E"/>
+                <outlet property="markerView" destination="uNV-Nf-3pK" id="BWl-aY-ZsN"/>
                 <outlet property="profileImage" destination="uGV-Lc-yVJ" id="paZ-tm-ZkK"/>
                 <outlet property="senderMessage" destination="RBi-z3-QQM" id="1Gr-cs-lnJ"/>
                 <outlet property="senderName" destination="vUh-HP-O0W" id="30t-yt-If4"/>
             </connections>
+            <point key="canvasLocation" x="34" y="107"/>
         </tableViewCell>
     </objects>
 </document>
