--- a/hh-ios/Controller/Home/ToDosViewController.xib
+++ b/hh-ios/Controller/Home/ToDosViewController.xib
@@ -9,9 +9,9 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PaymentsViewController">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ToDosViewController">
             <connections>
-                <outlet property="paymentTableView" destination="Wtt-5b-QwN" id="dDd-1O-uh0"/>
+                <outlet property="todosTableView" destination="xZ4-k7-Fc5" id="Xb3-m5-w6p"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,20 +20,20 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Wtt-5b-QwN">
-                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xZ4-k7-Fc5">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Wtt-5b-QwN" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="Kar-5k-OQo"/>
-                <constraint firstItem="Wtt-5b-QwN" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="RnF-aI-Dvx"/>
-                <constraint firstItem="Wtt-5b-QwN" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="g5L-90-Cwk"/>
-                <constraint firstItem="Wtt-5b-QwN" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="oIu-fM-dQH"/>
+                <constraint firstItem="xZ4-k7-Fc5" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="Ivm-gx-mG6"/>
+                <constraint firstItem="xZ4-k7-Fc5" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="lGk-J6-onp"/>
+                <constraint firstItem="xZ4-k7-Fc5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="u4k-kq-VRl"/>
+                <constraint firstItem="xZ4-k7-Fc5" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="unu-1d-dJY"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <point key="canvasLocation" x="34.5" y="104.5"/>
+            <point key="canvasLocation" x="39.5" y="104.5"/>
         </view>
     </objects>
 </document>
