--- a/hh-ios/Controller/Authentication/CreateHouseViewController.xib
+++ b/hh-ios/Controller/Authentication/CreateHouseViewController.xib
@@ -1,22 +1,128 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CreateHouseViewController">
             <connections>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="continueButton" destination="NEz-2a-Ljg" id="ORR-0y-raQ"/>
+                <outlet property="houseNicknameField" destination="Oh3-Qa-sex" id="9AY-UV-XBf"/>
+                <outlet property="messageContainer" destination="GpV-mJ-Xg7" id="h9b-2B-JWI"/>
+                <outlet property="scrollView" destination="FjB-0M-tyy" id="Zon-OK-Hqh"/>
+                <outlet property="view" destination="LfP-Sy-zxP" id="qLT-mF-8zr"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="LfP-Sy-zxP">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FjB-0M-tyy">
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g1u-pS-xfv">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
+                            <subviews>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GpV-mJ-Xg7">
+                                    <rect key="frame" x="8" y="8" width="359" height="43.5"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home.png" translatesAutoresizingMaskIntoConstraints="NO" id="rSU-dF-6eE">
+                                            <rect key="frame" x="18" y="12" width="26" height="26"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="26" id="caZ-rl-mcG"/>
+                                                <constraint firstAttribute="width" constant="26" id="zkW-0X-Ff1"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step 1: Specify a nickname for your house! You will also be able to modify this nickname in the house settings" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bpf-cm-FyH">
+                                            <rect key="frame" x="52" y="10" width="299" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.23921568630000001" green="0.30980392159999998" blue="0.36078431370000003" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstItem="rSU-dF-6eE" firstAttribute="top" secondItem="GpV-mJ-Xg7" secondAttribute="top" constant="12" id="C7l-ob-yWh"/>
+                                        <constraint firstItem="Bpf-cm-FyH" firstAttribute="leading" secondItem="rSU-dF-6eE" secondAttribute="trailing" constant="8" id="Ml5-aA-vA8"/>
+                                        <constraint firstAttribute="bottom" secondItem="Bpf-cm-FyH" secondAttribute="bottom" constant="14" id="mk0-W5-06p"/>
+                                        <constraint firstItem="rSU-dF-6eE" firstAttribute="leading" secondItem="GpV-mJ-Xg7" secondAttribute="leading" constant="18" id="nkV-C7-jtz"/>
+                                        <constraint firstItem="Bpf-cm-FyH" firstAttribute="top" secondItem="GpV-mJ-Xg7" secondAttribute="top" constant="10" id="seo-VI-drE"/>
+                                        <constraint firstAttribute="trailing" secondItem="Bpf-cm-FyH" secondAttribute="trailing" constant="8" id="w5h-9K-V9D"/>
+                                    </constraints>
+                                </view>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="House Nickname" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oh3-Qa-sex">
+                                    <rect key="frame" x="16" y="81.5" width="343" height="35"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="35" id="XAj-g3-fRO"/>
+                                    </constraints>
+                                    <nil key="textColor"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gUV-ff-iLW">
+                                    <rect key="frame" x="0.0" y="81.5" width="7" height="35"/>
+                                    <color key="backgroundColor" red="0.0" green="0.58823529409999997" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="7" id="9j8-RA-f17"/>
+                                        <constraint firstAttribute="height" constant="35" id="mhY-vR-pnp"/>
+                                    </constraints>
+                                </view>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NEz-2a-Ljg">
+                                    <rect key="frame" x="50" y="146.5" width="275" height="43"/>
+                                    <color key="backgroundColor" red="0.0" green="0.58823529409999997" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="43" id="Mr2-Q6-hQC"/>
+                                    </constraints>
+                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                    <state key="normal" title="Continue">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstItem="Oh3-Qa-sex" firstAttribute="centerY" secondItem="gUV-ff-iLW" secondAttribute="centerY" id="3pE-JJ-4iH"/>
+                                <constraint firstItem="GpV-mJ-Xg7" firstAttribute="top" secondItem="g1u-pS-xfv" secondAttribute="top" constant="8" id="BA8-MJ-QyI"/>
+                                <constraint firstAttribute="trailing" secondItem="Oh3-Qa-sex" secondAttribute="trailing" constant="16" id="QG4-NR-5q9"/>
+                                <constraint firstAttribute="trailing" secondItem="NEz-2a-Ljg" secondAttribute="trailing" constant="50" id="Ryg-3d-EfR"/>
+                                <constraint firstItem="NEz-2a-Ljg" firstAttribute="leading" secondItem="g1u-pS-xfv" secondAttribute="leading" constant="50" id="STb-1k-XML"/>
+                                <constraint firstItem="Oh3-Qa-sex" firstAttribute="top" secondItem="GpV-mJ-Xg7" secondAttribute="bottom" constant="30" id="a1K-rQ-fB0"/>
+                                <constraint firstItem="GpV-mJ-Xg7" firstAttribute="leading" secondItem="g1u-pS-xfv" secondAttribute="leading" constant="8" id="cD9-es-oXk"/>
+                                <constraint firstAttribute="trailing" secondItem="GpV-mJ-Xg7" secondAttribute="trailing" constant="8" id="sa8-18-Ug7"/>
+                                <constraint firstItem="NEz-2a-Ljg" firstAttribute="top" secondItem="Oh3-Qa-sex" secondAttribute="bottom" constant="30" id="uRv-Jc-zUQ"/>
+                                <constraint firstItem="Oh3-Qa-sex" firstAttribute="leading" secondItem="g1u-pS-xfv" secondAttribute="leading" constant="16" id="wBf-9W-cIW"/>
+                                <constraint firstItem="gUV-ff-iLW" firstAttribute="leading" secondItem="g1u-pS-xfv" secondAttribute="leading" id="y8b-s2-gmv"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <constraints>
+                        <constraint firstItem="g1u-pS-xfv" firstAttribute="height" secondItem="FjB-0M-tyy" secondAttribute="height" id="6MO-YU-JEJ"/>
+                        <constraint firstItem="g1u-pS-xfv" firstAttribute="leading" secondItem="FjB-0M-tyy" secondAttribute="leading" id="78h-ph-SEp"/>
+                        <constraint firstItem="g1u-pS-xfv" firstAttribute="top" secondItem="FjB-0M-tyy" secondAttribute="top" id="EYE-Qd-Xzy"/>
+                        <constraint firstItem="g1u-pS-xfv" firstAttribute="width" secondItem="FjB-0M-tyy" secondAttribute="width" id="a7f-wU-HDv"/>
+                        <constraint firstAttribute="trailing" secondItem="g1u-pS-xfv" secondAttribute="trailing" id="m2d-Lp-GJl"/>
+                        <constraint firstAttribute="bottom" secondItem="g1u-pS-xfv" secondAttribute="bottom" id="rPs-C3-Hle"/>
+                    </constraints>
+                </scrollView>
+            </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="FjB-0M-tyy" firstAttribute="top" secondItem="C3u-GL-RMT" secondAttribute="top" id="Xa3-ca-xkx"/>
+                <constraint firstItem="FjB-0M-tyy" firstAttribute="bottom" secondItem="C3u-GL-RMT" secondAttribute="bottom" id="tg4-OW-N1Z"/>
+                <constraint firstItem="FjB-0M-tyy" firstAttribute="leading" secondItem="C3u-GL-RMT" secondAttribute="leading" id="zJG-VO-RUi"/>
+                <constraint firstItem="FjB-0M-tyy" firstAttribute="trailing" secondItem="C3u-GL-RMT" secondAttribute="trailing" id="zOK-6O-OPR"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="C3u-GL-RMT"/>
+            <point key="canvasLocation" x="39.5" y="53.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="home.png" width="128" height="128"/>
+    </resources>
 </document>
