--- a/hh-ios/View/Table Cells/MainMenu/MenuTableViewCell.xib
+++ b/hh-ios/View/Table Cells/MainMenu/MenuTableViewCell.xib
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="54" id="KGk-i7-Jjw" customClass="MenuTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="54"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="53.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nfT-Xe-gjW">
-                        <rect key="frame" x="47" y="17" width="265" height="21"/>
+                        <rect key="frame" x="55" y="24.5" width="249" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="qGU-WW-Rvd"/>
                         </constraints>
@@ -29,20 +28,19 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gDT-fL-K7G">
-                        <rect key="frame" x="16" y="18" width="18" height="18"/>
+                        <rect key="frame" x="24" y="26" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="18" id="Bye-7q-8Az"/>
                             <constraint firstAttribute="height" constant="18" id="Uiy-oN-BR9"/>
                         </constraints>
                     </imageView>
                 </subviews>
-                <color key="backgroundColor" red="0.23921568627450979" green="0.30980392156862746" blue="0.36078431372549019" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="nfT-Xe-gjW" firstAttribute="leading" secondItem="gDT-fL-K7G" secondAttribute="trailing" constant="13" id="25H-9l-xAU"/>
-                    <constraint firstItem="gDT-fL-K7G" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="5f5-A5-kij"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="gDT-fL-K7G" secondAttribute="bottom" constant="9.5" id="EVC-nc-yFh"/>
                     <constraint firstItem="nfT-Xe-gjW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="G2n-s4-37M"/>
                     <constraint firstItem="nfT-Xe-gjW" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="LCV-Gf-sy4"/>
+                    <constraint firstItem="gDT-fL-K7G" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="iRX-bP-UyW"/>
                     <constraint firstItem="gDT-fL-K7G" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="q14-m2-Eeb"/>
                 </constraints>
             </tableViewCellContentView>
