--- a/hh-ios/Controller/Authentication/CreateHouseViewController2.xib
+++ b/hh-ios/Controller/Authentication/CreateHouseViewController2.xib
@@ -39,7 +39,7 @@
                                                 <constraint firstAttribute="width" constant="26" id="k8d-EZ-ghZ"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step 2: Create a unique identifier for your house. Think of this as a &quot;username&quot; for your house." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mCP-hp-Cx0">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Step 2: Create a unique identifier for your house, which is 6 letters or more. Think of this as a &quot;username&quot; for your house." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mCP-hp-Cx0">
                                             <rect key="frame" x="52" y="10" width="299" height="19.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
