Nav button methods in ViewHelper, fixed hierarchy in appdelegate, added and modified todo cells, Added new endpoints, fixed NSNull error in model files, added notification system from UserHome, moved data to menu instead of SWReveal

--- a/hh-ios/Controller/Authentication/LoginViewController.xib
+++ b/hh-ios/Controller/Authentication/LoginViewController.xib
@@ -41,7 +41,7 @@
                                     </constraints>
                                     <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <textInputTraits key="textInputTraits"/>
+                                    <textInputTraits key="textInputTraits" textContentType="email"/>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D9L-eK-CqT">
                                     <rect key="frame" x="16" y="85" width="343" height="35"/>
