--- a/hh-ios/Controller/Authentication/SignupViewController.xib
+++ b/hh-ios/Controller/Authentication/SignupViewController.xib
@@ -78,7 +78,7 @@
                                     </constraints>
                                     <nil key="textColor"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <textInputTraits key="textInputTraits"/>
+                                    <textInputTraits key="textInputTraits" textContentType="email"/>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gLB-ZF-1xS">
                                     <rect key="frame" x="16" y="191.5" width="343" height="35"/>
