--- a/hh-ios/Controller/Home/Todo/TodoDetailsViewController.xib
+++ b/hh-ios/Controller/Home/Todo/TodoDetailsViewController.xib
@@ -22,10 +22,10 @@
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="H8s-OI-6cQ">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="0.81176470588235294" green="0.84705882352941175" blue="0.86274509803921573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.81176470588235294" green="0.84705882352941175" blue="0.86274509803921573" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="H8s-OI-6cQ" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="A1J-0w-SrV"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="H8s-OI-6cQ" secondAttribute="trailing" id="De9-X6-4S6"/>
